Do not skip password forms with multiple inputs with the same name.

Bug: 803215
Change-Id: Ia1ec0f1de8390c59308e8c70cbaebe285ae7431d